--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ textarea{
 
 .description{
   white-space: pre-wrap;
+  background-color: lightgrey;
+  border: 1px solid black;
+  border-radius: 10px;
 }
 
 .time-block{
@@ -45,6 +48,7 @@ textarea{
 .past {
   background-color: #d3d3d3;
   color: white;
+  border-radius: 10%;
 }
 
 .present {
@@ -58,14 +62,33 @@ textarea{
 }
 
 .saveBtn {
-  border-left: 1px solid black;
+  border: 1px solid black;
+  width: 7%;
+  border-top-left-radius: 15px;
   border-top-right-radius: 15px;
+  border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
 }
 
 .saveBtn i:hover {
+  font-size: 20px;
+  transition: all .3s ease-in-out;
+}
+
+.checkBtn {
+  border: 1px solid black;
+  width: 7%;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: lightgreen;
+  color: white;
+}
+
+.checkBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
