Added time of day with color

--- a/style.css
+++ b/style.css
@@ -97,3 +97,11 @@ textarea{
 .completed {
   background-color: lightgreen;
 }
+
+.past {
+  background-color: pink;
+}
+
+.present {
+  background-color: lightblue;
+}
