--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1;
   color: black;
 }
 
-textarea{
+textarea {
   background: transparent;
   border: none;
   resize: none;
@@ -22,7 +22,7 @@ textarea{
   border-bottom: 10px solid black;
 }
 
-.description{
+.description {
   white-space: pre-wrap;
   background-color: lightgrey;
   border-left: 1px solid black;
@@ -30,7 +30,7 @@ textarea{
   border-radius: 10px;
 }
 
-.time-block{
+.time-block {
   text-align: center;
   border-radius: 15px;
 }
@@ -38,7 +38,7 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
 }
 
 .hour {
@@ -50,7 +50,7 @@ textarea{
 .past {
   background-color: #d3d3d3;
   color: white;
-  border-radius: 10%;
+  border-radius: 10px;
 }
 
 .present {
@@ -70,11 +70,12 @@ textarea{
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  background-color: #06AED5;
+  background-color: #06aed5;
   color: white;
 }
 
-.saveBtn, i:hover {
+.saveBtn,
+i:hover {
   font-size: 20px;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
